--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="theme-color" content="#181a1b" />
+    <meta name="description" content="Portfolio of Gaurav Pal, B.Tech CSE student, coder, and open-source contributor." />
+    <meta property="og:title" content="Gaurav Pal – Developer Portfolio" />
+    <meta property="og:description" content="Portfolio of Gaurav Pal, B.Tech CSE student, coder, and open-source contributor." />
+    <meta property="og:image" content="%PUBLIC_URL%/188447565652573851.jpeg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gauravpal.vercel.app" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Gaurav Pal – Developer Portfolio" />
+    <meta name="twitter:description" content="Portfolio of Gaurav Pal, B.Tech CSE student, coder, and open-source contributor." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/188447565652573851.jpeg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <!--
@@ -22,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Gaurav Pal – Developer Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
